# physics2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  custom_env.md  dependencies.sh  env_config.md
python/: gl_test.py
python/src/: custom_cartpole.py  run.py  test.ipynb
python/src/envs/: __init__.py  custom_cartpole.py  custom_snake.py  setup.py
python/src/envs/custom_envs.egg-info/: requires.txt
src/: CMakeLists.txt  Definition.hpp  Helper.cpp  Helper.hpp  MainWindow.cpp  MainWindow.hpp  bind_test.cpp  main.cpp  proxy.cpp  proxy.hpp
src/apps/: App.cpp  App.hpp
src/envs/: BaseEnv.hpp  Cartpole.hpp  EnvHeaders.hpp
src/physics/: Body.cpp  Body.hpp  Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp  DistanceJoint.cpp  DistanceJoint.hpp  Environment.cpp  Environment.hpp  Joint.cpp  Joint.hpp  PrismaticJoint.cpp  PrismaticJoint.hpp  RevoluteJoint.cpp  RevoluteJoint.hpp  TestThread.cpp  TestThread.hpp  World.cpp  World.hpp  WorldParser.cpp  WorldParser.hpp
src/presets/: big_world.json  cartpole.json  chain.json  fall_1.json  fall_2.json  fall_3.json  fall_4.json  fall_5.json  pendulum.json  snake.json
src/window/: RenderWindow.cpp  RenderWindow.hpp
test/: main.cpp  test.json
test/_gltest/: OpenGLWindow.cpp  OpenGLWindow.hpp  RectangleWindow.cpp  RectangleWindow.hpp  TestDialog.cpp  TestDialog.hpp  TriangleWindow.cpp  TriangleWindow.hpp
test/peTest/: CMakeLists.txt  MainWidget.cpp  MainWindow.cpp  MainWindow.hpp  main.cpp
test/peTest/apps/: TestApp.cpp  TestApp.hpp
test/peTest/presets/: chain.json
test/peTest/window/: TestWindow.cpp  TestWindow.hpp
test/shaders/: pass_through.vert  simple.frag
